--- a/css/general-style.css
+++ b/css/general-style.css
@@ -11,7 +11,7 @@ body {
 /* General text */
 h1, h2, h3, b, input {
 	display: inline;
-	font-family: sans-serif, "Lucida Console", "Courier New", monospace
+	font-family: "Helvetica", "Helvetica Neue", monospace
 }
 
 /* These are styles for different states of components. You can make layer-specific versions with .c.locked, for example */
